--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web3-nest",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Tarik Sassi <tarik.sassi@gmail.com>",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -21,11 +21,11 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^2.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/mongoose": "^9.1.1",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/common": "^9.4.1",
+    "@nestjs/config": "^2.3.2",
+    "@nestjs/core": "^9.4.1",
+    "@nestjs/mongoose": "^9.2.2",
+    "@nestjs/platform-express": "^9.4.1",
     "install": "^0.13.0",
     "mongoose": "^6.4.1",
     "npm": "^8.7.0",
@@ -74,5 +74,7 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "main": "index.js",
+  "repository": "git@github.com:sassit/web3-nest.git"
 }
