--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^9.4.1",
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.4.1",
+    "@nestjs/swagger": "^6.3.0",
     "install": "^0.13.0",
     "mongoose": "^6.4.1",
     "npm": "^8.7.0",
