--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^9.4.1",
     "@nestjs/swagger": "^6.3.0",
     "dotenv": "^16.0.3",
+    "ethers": "5.7.2",
     "install": "^0.13.0",
     "mongoose": "^6.4.1",
     "npm": "^8.7.0",
