--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@mfsoftworks/nestjs-ipfs": "^1.0.2",
     "@nestjs/common": "^9.4.1",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.4.1",
     "@nestjs/mongoose": "^9.2.2",
-    "@nestjs/platform-express": "^9.4.1",
+    "@nestjs/platform-express": "^9.4.2",
     "@nestjs/swagger": "^6.3.0",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "ethers": "5.7.2",
     "install": "^0.13.0",
@@ -44,6 +46,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
