--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@mfsoftworks/nestjs-ipfs": "^1.0.2",
+    "@helia/unixfs": "^1.3.0",
     "@nestjs/common": "^9.4.1",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.4.1",
@@ -32,6 +32,8 @@
     "dotenv": "^16.0.3",
     "ethers": "5.7.2",
     "install": "^0.13.0",
+    "ipfs-core": "^0.18.1",
+    "ipfs-http-client": "53.0.1",
     "mongoose": "^6.4.1",
     "npm": "^8.7.0",
     "reflect-metadata": "^0.1.13",
@@ -51,6 +53,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "class-transformer": "^0.5.1",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
