--- a/env.example
+++ b/env.example
@@ -1,5 +1,13 @@
-ALCHEMY_API_KEY="YOUR_KEY"
-PRIVATE_KEY="YOUR_KEY"
-MY_ERC20_ACCOUNT="0x63Ec8bcF66479CE5844Eb8cb5147C9D1CC448B95"
-BALLOT_CONTRACT_ADDRESS="0x8D0A0e1d170C0cad1b47737dDf344E5aCe0E777C"
-TOKEN_CONTRACT_ADDRESS="0x902621CA500234840230bD15C2d560210B0f4376"
+MNEMONIC="display basic vicious"
+PRIVATE_KEY=""
+INFURA_API_KEY=""
+INFURA_API_SECRET=""
+ALCHEMY_API_KEY=""
+ETHERSCAN_API_KEY=""
+POLYGONSCAN_API_KEY=""
+ETH_SEPOLIA_URL="https://eth-sepolia.g.alchemy.com/v2/-Dgaq_hDia5"    
+ETH_MUMBAI_URL="https://polygon-mumbai.g.alchemy.com/v2/-fRw8J2f"  
+TRELLOR_ORACLE=""
+MY_ERC20_ACCOUNT=""
+BALLOT_CONTRACT_ADDRESS=""
+TOKEN_CONTRACT_ADDRESS=""
