Seemingly solved form data issue

--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "ethers": "5.7.2",
+    "fs": "^0.0.1-security",
     "install": "^0.13.0",
     "ipfs-core": "^0.18.1",
     "ipfs-http-client": "53.0.1",
     "mongoose": "^6.4.1",
+    "nestjs-form-data": "^1.8.7",
     "npm": "^8.7.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
